--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
-welcome
+<div class='col-12 vh-100 d-flex align-items-center'>
+  <%= image_tag 'popaisekine.jpg', class: 'rounded-circle mx-auto d-block img-fluid' %>
+</div>
