新規登録画面デザイン

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to 'logout', destroy_user_session_path, method: :delete, class: 'text-center' %>
 <div class='col-12 vh-100 d-flex align-items-center'>
   <%= image_tag 'popaisekine.jpg', class: 'rounded-circle mx-auto d-block img-fluid' %>
 </div>
