--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class='col-xl-5 mx-auto'>
       <div id='second'>
         <div class='myform form'>
-          <div class='logo d-flex align-items-center'>
+          <div class='logo-signup d-flex align-items-center'>
             <div class='col-xl-12 text-center'>
               <h1 class='text-royalgreen mb-0 align-bottom'>
                 <span class='ml-2'>POPAI</span>
@@ -13,7 +13,7 @@
             </div>
           </div>
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: 'text-fontgray') do |f| %>
-            <%= render 'devise/shared/error_messages', resource: resource %>
+            <%= devise_error_messages! %>
             <div class='form-group'>
               <%= f.label 'ニックネーム' %>
               <%= f.text_field :nickname, autofocus: true, class: 'form-control' %>
@@ -35,7 +35,9 @@
             </div>
             <div class='col-xl-12 '>
               <div class='form-group'>
-                <p class='text-center text-fontgray'><a href='#' class='text-fontgray'>ログインはこちら</a></p>
+                <p class='text-center text-fontgray'>
+                <%= link_to 'ログインはこちら', new_user_session_path, class: 'text-fontgray' %>
+                </p>
               </div>
             </div>
           </div>
