--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'logout', destroy_user_session_path, method: :delete, class: 'text-center' %>
 <div class='col-12 vh-100 d-flex align-items-center'>
   <%= image_tag 'popaisekine.jpg', class: 'rounded-circle mx-auto d-block img-fluid' %>
+  <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'welcome-logout text-center' %>
 </div>
