フォントのchrome対応

--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -12,7 +12,7 @@ a {
   text-decoration:none !important;
 }
 h1,h2,h3 {
-  font-family: 'Puente-Bold';
+  font-family: 'Puente-Bold', 'arial black';
 }
 h1 {
   font-size: 15vmin;
