adminユーザーを新規登録できないように変更

--- a/app/views/layouts/admins.html.slim
+++ b/app/views/layouts/admins.html.slim
@@ -25,10 +25,11 @@ html
       div.row.container-sticky
         nav.col-md-2.bg-light.sidebar
           ul.nav.flex-column
-            li.nav-item
-              = link_to 'Dashboard', admins_root_path, class: 'nav-link'
-            li.nav-item
-              = link_to 'Exercises', admins_exercises_path, class: 'nav-link'
+            - if current_admin
+              li.nav-item
+                = link_to 'Dashboard', admins_root_path, class: 'nav-link'
+              li.nav-item
+                = link_to 'Exercises', admins_exercises_path, class: 'nav-link'
 
         main.col-md-9.ml-sm-auto.col-lg-10.px-4 role='main'
           div.d-flex.justify-content-between.flex-wrap.flex-md-nowrap.align-items-center.pt-3.pb-2.mb-3.border-bottom
