--- a/app/views/records/_exercise_detail_fields.html.erb
+++ b/app/views/records/_exercise_detail_fields.html.erb
@@ -1,7 +1,8 @@
-<div class='nested-fields form-inline'>
+<div class='nested-fields form-inline text-light'>
   <div class='form-group'>
     <%= f.label :set_count %>
-    <%= f.number_field :set_count %>
+    <%= f.hidden_field :set_count %>
+    <span class='set-count'></span>
   </div>
   <div class='form-group'>
     <%= f.label :weight %>
@@ -11,4 +12,5 @@
     <%= f.label :rep_count %>
     <%= f.number_field :rep_count %>
   </div>
+  <%= link_to_remove_association 'remove exercise detail', f %>
 </div>
