--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -1,15 +1,39 @@
-<%= form_for record do |f| %>
-  <div class='field'>
-    <%= f.hidden_field :user_id, value: current_user.id %>
-  </div>
-  <h3>Record Exercise</h3>
-  <div id='tasks'>
-    <%= f.fields_for :record_exercises do |record_exercise| %>
-      <%= render 'record_exercise_fields', f: record_exercise %>
-    <% end %>
-    <div id='links'>
-      <%= link_to_add_association 'add record_exercise', f, :record_exercises %>
+<%# <%= form_for record do |f| %1> %>
+<%#   <div class='field'> %>
+<%#     <%= f.hidden_field :user_id, value: current_user.id %1> %>
+<%#   </div> %>
+<%#   <h3>Record Exercise</h3> %>
+<%#   <div id='tasks'> %>
+<%#     <%= f.fields_for :record_exercises do |record_exercise| %1> %>
+<%#       <%= render 'record_exercise_fields', f: record_exercise %1> %>
+<%#     <% end %1> %>
+<%#     <div id='links'> %>
+<%#       <%= link_to_add_association 'add record_exercise', f, :record_exercises %1> %>
+<%#     </div> %>
+<%#     <%= f.submit %1> %>
+<%#   </div> %>
+<%# <% end %1> %>
+
+<div class='container text-light'>
+  <div class='row'>
+    <div class='col-xl-12 mx-auto record'>
+      <div class='record-form form'>
+        <%= form_for record do |f| %>
+        <%# <%= form_for(resource, as: resource_name, url: session_path(resource_name), class: 'text-fontgray') do |f| %1> %>
+          <%# <%= devise_error_messages! %1> %>
+          <%= f.hidden_field :user_id, value: current_user.id %>
+          <div id='record_exercises'>
+          <%= f.fields_for :record_exercises do |record_exercise| %>
+            <%= render 'record_exercise_fields', f: record_exercise %>
+          <% end %>
+          <div class='links'>
+            <%= link_to_add_association 'add record_exercise', f, :record_exercises %>
+          </div>
+          <div class='form-group text-center mb-3'>
+            <%= f.submit 'レコード登録', class: 'btn btn-block mybtn btn-royalgreen text-light' %>
+          </div>
+        </div>
+      <% end %>
     </div>
-    <%= f.submit %>
   </div>
-<% end %>
+</div>
