--- a/app/views/records/_record_exercise_fields.html.erb
+++ b/app/views/records/_record_exercise_fields.html.erb
@@ -15,7 +15,10 @@
       <%= render 'exercise_detail_fields', f: exercise_detail %>
     <%end%>
     <div class='links'>
-      <%= link_to_add_association 'add exercise detail', f, :exercise_details %>
+      <%# <%= link_to_add_association 'add exercise detail', f, :exercise_details %1> %>
+      <%= link_to_add_association f, :exercise_details, class: 'add-exercise-detail' do %>
+        <span>Add Exercise Detail</span>
+      <% end %>
     </div>
   </div>
 </div>
