--- a/app/views/layouts/admins.html.slim
+++ b/app/views/layouts/admins.html.slim
@@ -30,6 +30,8 @@ html
                 = link_to 'Dashboard', admins_root_path, class: 'nav-link'
               li.nav-item
                 = link_to 'Exercises', admins_exercises_path, class: 'nav-link'
+              li.nav-item
+                = link_to 'Parts', admins_parts_path, class: 'nav-link'
 
         main.col-md-9.ml-sm-auto.col-lg-10.px-4 role='main'
           div.d-flex.justify-content-between.flex-wrap.flex-md-nowrap.align-items-center.pt-3.pb-2.mb-3.border-bottom
