--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -18,6 +18,7 @@
     <%= stylesheet_link_tag    'user', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
+  <%# <body class='container'> %>
   <body>
     <%= yield %>
   </body>
