セット入力欄デザイン

--- a/app/assets/stylesheets/_font.scss
+++ b/app/assets/stylesheets/_font.scss
@@ -32,5 +32,5 @@
 }
 
 body {
-    font-family:"Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
+    font-family: 'Yu Gothic', '游ゴシック', YuGothic, '游ゴシック体', 'ヒラギノ角ゴ Pro W3', 'メイリオ', sans-serif;
 }
