--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,18 @@
-<div class='col-12 vh-100 d-flex align-items-center'>
-  <%= image_tag 'popaisekine.jpg', class: 'rounded-circle mx-auto d-block img-fluid' %>
-  <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'welcome-logout text-center' %>
+<%# <div class='container vh-100 d-flex align-items-center'> %>
+<div class='container vh-100'>
+  <div class='row m-5'>
+    <div class='col-12'>
+      <%= image_tag 'popaisekine.jpg', class: 'rounded-circle mx-auto d-block img-fluid' %>
+    </div>
+  </div>
+  <div class='row m-5'>
+    <div class='col-12 text-center'>
+      <%= link_to 'レコード記録', new_record_path, class: 'puente-bold h4' %>
+    </div>
+  </div>
+  <div class='row m-5'>
+    <div class='col-12 text-center'>
+      <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'puente-bold h4' %>
+    </div>
+  </div>
 </div>
