--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -10,8 +10,9 @@
     <%# <%= favicon_link_tag %1> %>
 
     <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1.0'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
     <meta name='format-detection' content='telephone=no' />
+
 
     <link href='https://use.fontawesome.com/releases/v5.6.1/css/all.css' rel='stylesheet'>
 
