--- a/app/views/records/_record_exercise_fields.html.erb
+++ b/app/views/records/_record_exercise_fields.html.erb
@@ -11,12 +11,12 @@
       </div>
       <div class='col-2 p-0'>
         <% part_options = Part.order(:id).map { |p| [p.name, p.id, data: { children_path: part_exercises_path(p) }] } %>
-        <%= f.select :part_id, part_options, { include_blank: true }, class: 'select-parent form-control part-form' %>
+        <%= f.select :part_id, part_options, { prompt: '--' }, class: 'select-parent form-control part-form' %>
       </div>
       <div class='col-7 p-0 pl-2'>
         <% exercises = [] %>
         <% exercise_options = exercises.map { |e| [e.name, e.id] } %>
-        <%= f.select :exercise_id, exercise_options, { include_blank: true }, class: 'select-children form-control exercise-form' %>
+        <%= f.select :exercise_id, exercise_options, { prompt: '--' }, class: 'select-children form-control exercise-form' %>
       </div>
       <div class='col-1 p-0'>
       </div>
