--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -1,9 +1,37 @@
 @import 'color';
 
 // -----------------------------------
+// ヘッダー フッター
+// -----------------------------------
+.header {
+  height: 3rem;
+  line-height: 3rem;
+  .fa-chevron-left {
+    position: absolute;
+    font-size: 1rem;
+    line-height: 3rem;
+    left: 1rem;
+  }
+}
+.footer {
+  height: 3rem;
+  .footer-icon {
+    height: 1.5rem;
+    line-height: 2rem;
+  }
+  .footer-text {
+    height: 1.5rem;
+    line-height: 1.5rem;
+    font-size: 0.5rem;
+  }
+}
+.user-body {
+  background:rgba(0, 0, 0, 0.76);
+}
+// -----------------------------------
 // サインアップ・ログインテンプレート
 // -----------------------------------
-body {
+.application-body {
   padding-top: 1rem;
   padding-bottom: 1rem;
   background:rgba(0, 0, 0, 0.76);
@@ -80,7 +108,7 @@ input {
   .record-form{
     overflow-y: scroll;
     position: relative;
-    height: calc(100vh - 2rem);
+    height: calc(100vh - 6rem);
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
