--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title>PopaiSekine</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <title>
+      <%= full_title(yield(:title)) %>
+    </title>
+
+    <%= csrf_meta_tags %>
+    <%# <%= favicon_link_tag %1> %>
+
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
+    <meta name='format-detection' content='telephone=no' />
+
+
+    <link href='https://use.fontawesome.com/releases/v5.6.1/css/all.css' rel='stylesheet'>
+
+    <%= stylesheet_link_tag    'user', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
-
-  <body>
+  <body class='application-body'>
     <%= yield %>
   </body>
 </html>
+
