--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -15,9 +15,15 @@
 }
 .footer {
   height: 3rem;
+  a:hover {
+    color: $royalgreen;
+  }
   .footer-icon {
     height: 1.5rem;
     line-height: 2rem;
+    .fa-list-alt, .fa-cog {
+      font-size: 1rem;
+    }
   }
   .footer-text {
     height: 1.5rem;
