--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -36,29 +36,28 @@
     <footer class=''>
       <div class='container'>
         <div class='row'>
-          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
-            <div class='footer-icon w-100'>
-              <i class='far fa-list-alt'></i>
-            </div>
-            <div class='footer-text w-100'>
-              レコード
-            </div>
+          <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
+            <%= link_to records_path do %>
+              <%# <div class='footer-icon w-100'> %>
+              <div class='footer-icon'>
+                <i class='far fa-list-alt'></i>
+              </div>
+              <%# <div class='footer-text w-100'> %>
+              <div class='footer-text'>
+                レコード
+              </div>
+            <% end %>
           </div>
-          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
-            <div class='footer-icon w-100'>
-              <i class='far fa-calendar-alt'></i>
-            </div>
-            <div class='footer-text w-100'>
-              カレンダー
-            </div>
+          <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
+            <%= link_to '#' do %>
+              <div class='footer-icon w-100'>
+                <i class='fas fa-cog'></i>
+              </div>
+              <div class='footer-text w-100'>
+                設定
+              </div>
+            <% end %>
           </div>
-          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
-            <div class='footer-icon w-100'>
-              <i class='fas fa-cog'></i>
-            </div>
-            <div class='footer-text w-100'>
-              設定
-            </div>
           </div>
         </div>
       </div>
