--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -184,6 +184,7 @@ input {
     margin: 0.5rem;
     margin-bottom: 0;
     width: calc(100vw - 1rem);
+    max-width: 500px;
     border-radius: 1rem;
     height: 101px;
   }
@@ -209,6 +210,7 @@ input {
   }
   .fa-comment-alt {
     color: $royalgreen;
+    font-size: 40px;
   }
   ul {
     overflow: hidden;
@@ -218,5 +220,9 @@ input {
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+  }
+  .trainer-image {
+    max-height: 60px;
+    width: 60px;
   }
 }
