--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,16 +1,17 @@
-<div class='container'>
+<% provide(:title, 'レコード一覧') %>
+<div class='container mw-100'>
   <div class='row'>
     <div class='col-12 mx-auto record p-0'>
       <div class='record-index form'>
         <% (1..40).each do |n| %>
-          <div class='row bg-light p-3 record-row'>
-            <div class='col-2 mx-auto p-0 text-royalgreen text-center record-row-day'>
+          <div class='row bg-light p-3 record-row mx-auto'>
+            <div class='col-2 mx-auto p-0 pt-1 text-royalgreen text-center record-row-day'>
               <% time = Time.now %>
               <%= time.strftime('%a').upcase %>
               <br>
               <span class='record-row-day-number'><%= time.strftime('%m.%d').upcase %></span>
             </div>
-            <div class='col-5 mx-auto p-0 pl-3 d-flex align-items-center'>
+            <div class='col-5 mx-auto p-0 pl-3 pt-1'>
               <ul class='m-0'>
                 <li>腕 アームカール</li>
                 <li>腕 インクラインベンチアームカール</li>
@@ -18,10 +19,10 @@
                 <li>etc</li>
               </ul>
             </div>
-            <div class='col-3 mx-auto p-0 d-flex align-items-center pr-2 pl-1'>
-              <%= image_tag 'popaisekine.jpg', class: 'rounded-circle mx-auto d-block img-fluid' %>
+            <div class='col-3 mx-auto p-0 pr-2 pl-1 pt-1'>
+              <%= image_tag 'popaisekine.jpg', class: 'rounded-circle trainer-image mx-auto d-block' %>
             </div>
-            <div class='col-2 mx-auto p-0 text-center h-100 comment-icon'>
+            <div class='col-2 mx-auto p-0 pt-1 pl-1 text-center h-100 comment-icon'>
               <i class='fas fa-comment-alt'></i>
               <%# <i class='far fa-comment-alt'></i> %>
             </div>
