--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -209,7 +209,8 @@ input {
     font-size: 1.1rem;
   }
   .fa-comment-alt {
-    color: $royalgreen;
+    // color: $royalgreen;
+    color: $icongray;
     font-size: 40px;
   }
   ul {
