--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -3,20 +3,24 @@
   <div class='row'>
     <div class='col-12 mx-auto record p-0'>
       <div class='record-index form'>
-        <% (1..40).each do |n| %>
+        <% @records.each do |record| %>
           <div class='row bg-light p-3 record-row mx-auto'>
             <div class='col-2 mx-auto p-0 pt-1 text-royalgreen text-center record-row-day'>
-              <% time = Time.now %>
-              <%= time.strftime('%a').upcase %>
+              <%= record.created_at.strftime('%a').upcase %>
               <br>
-              <span class='record-row-day-number'><%= time.strftime('%m.%d').upcase %></span>
+              <span class='record-row-day-number'><%= record.created_at.strftime('%m.%d').upcase %></span>
             </div>
             <div class='col-5 mx-auto p-0 pl-3 pt-1'>
               <ul class='m-0'>
-                <li>腕 アームカール</li>
-                <li>腕 インクラインベンチアームカール</li>
-                <li>腕 アームカール</li>
-                <li>etc</li>
+                <% get_record_exercises_limit = 3 %>
+                <% record.record_exercises.each_with_index do |record_exercise, i| %>
+                  <% if i < get_record_exercises_limit %>
+                    <li><%= "#{record_exercise.exercise.part.name} #{record_exercise.exercise.name}" %></li>
+                  <% else %>
+                    <li>etc</li>
+                    <% break %>
+                  <% end %>
+                <% end %>
               </ul>
             </div>
             <div class='col-3 mx-auto p-0 pr-2 pl-1 pt-1'>
