デザイン修正

--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -1,6 +1,13 @@
 @import 'color';
 
 // -----------------------------------
+// 共通
+// -----------------------------------
+.mw-1024 {
+  max-width: 1024px;
+}
+
+// -----------------------------------
 // ヘッダー フッター
 // -----------------------------------
 .header {
