--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -1,4 +1,4 @@
-<div class='container text-light'>
+<div class='container text-light mw-1024'>
   <div class='text-light'>
     <%= form_for record do |f| %>
       <%= f.hidden_field :user_id, value: current_user.id %>
