--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -9,7 +9,7 @@
               <div class='col-2 mx-auto p-0 pt-1 text-royalgreen text-center record-row-day'>
                 <%= record.created_at.strftime('%a').upcase %>
                 <br>
-                <span class='record-row-day-number'><%= record.created_at.strftime('%m.%d').upcase %></span>
+                <span class='record-row-day-number'><%= record.created_at.strftime('%m.%d') %></span>
               </div>
               <div class='col-5 mx-auto p-0 pl-2 pt-2'>
                 <ul class='m-0'>
