--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -37,7 +37,7 @@
       </div>
       <div class='record-new rounded-circle bg-royalgreen'>
         <%= link_to new_record_path do %>
-          <%= image_tag 'record-new', class: 'record-new-image mx-auto d-block' %>
+          <%= image_tag 'record-new.png', class: 'record-new-image mx-auto d-block' %>
         <% end %>
       </div>
     </div>
